# antof-traffic-client

./: .dockerignore  .env.example  .gitignore  Dockerfile.app  Dockerfile.mlflow  ML.ipynb  Makefile  PTT.md  PTT.txt  agrupacion_puntos.ipynb  alerts.csv  analisis.ipynb  analisis_tiempo.ipynb  antof.ipynb  cantidad.ipynb  config.py  cronograma.xlsx  d44195e2-2952-4b2f-8539-af8e85b661c5.json  data.json  descriptivo.ipynb  docker-compose.yml  exploratory.py  feeds-tvt.json  grid_search.txt  grid_search_xgb.txt  gunicorn.config.py  hipotesis.ipynb  holidays.json  info.py  init.sh  insert_to_db.py  jam.ipynb  main.py  ml.py  ml2.py  no_events_time.txt  notes.md  proba.ipynb  pyproject.toml  requirements.txt  (+7 more)
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: update_data.py
analisis/: ML.ipynb  ML.py  agrupacion_puntos.ipynb  agrupacion_puntos.py  analisis.ipynb  analisis_tiempo.ipynb  cantidad.ipynb  comp_models.ipynb  descriptivo.ipynb  hipotesis.ipynb  hipotesis.py  jam.ipynb  learning_curve.ipynb  overfitting.ipynb  proba.ipynb  route.ipynb
analytics/: alerts.py  grouper.py  ml.py  plot.py
aws/: dynamodb.py
dashboard/: __init__.py  dash_config.py  index.py  init.py  models.py  train.py  update_data.py  update_model.py
dashboard/assets/: styles.css
dashboard/components/: header.py  ml_params.py  tables.py
db/: Waze_data.sql
docs/: PTT.doc  PTT.md  PTT.txt  diagram_info.md  noevents.md  notes.md  references.md
mlruns/0/: meta.yaml
mlruns/451244737800504898/: meta.yaml
mlruns/451244737800504898/30a7cb96056e49838cf7710d3445cef5/: meta.yaml
mlruns/451244737800504898/30a7cb96056e49838cf7710d3445cef5/metrics/: accuracy  cm_false_negative  cm_false_positive  cm_true_negative  cm_true_positive  cv_score_avg  cv_score_fold_0  cv_score_fold_1  cv_score_fold_2  cv_score_fold_3  cv_score_fold_4  cv_score_fold_5  cv_score_fold_6  cv_score_fold_7  cv_score_fold_8  cv_score_fold_9  f1  precision  recall
mlruns/451244737800504898/30a7cb96056e49838cf7710d3445cef5/params/: sample_no_events
mlruns/451244737800504898/30a7cb96056e49838cf7710d3445cef5/tags/: mlflow.log-model.history  mlflow.runName
mlruns/451244737800504898/495e099f768f4265bc3c93e5ff0949c2/: meta.yaml
mlruns/451244737800504898/495e099f768f4265bc3c93e5ff0949c2/metrics/: accuracy  cm_false_negative  cm_false_positive  cm_true_negative  cm_true_positive  cv_score_avg  cv_score_fold_0  cv_score_fold_1  cv_score_fold_2  cv_score_fold_3  cv_score_fold_4  cv_score_fold_5  cv_score_fold_6  cv_score_fold_7  cv_score_fold_8  cv_score_fold_9  f1  precision  recall
mlruns/451244737800504898/495e099f768f4265bc3c93e5ff0949c2/tags/: mlflow.log-model.history  mlflow.runName
mlruns/451244737800504898/5e7c5c68a776473d8a56da30e3af275f/: meta.yaml
mlruns/451244737800504898/5e7c5c68a776473d8a56da30e3af275f/metrics/: accuracy  cm_false_negative  cm_false_positive  cm_true_negative  cm_true_positive  cv_score_avg  cv_score_fold_0  cv_score_fold_1  cv_score_fold_2  cv_score_fold_3  cv_score_fold_4  cv_score_fold_5  cv_score_fold_6  cv_score_fold_7  cv_score_fold_8  cv_score_fold_9  f1  precision  recall
mlruns/451244737800504898/5e7c5c68a776473d8a56da30e3af275f/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/451244737800504898/607b9950625f4295aceda5969794f2d0/: meta.yaml
mlruns/451244737800504898/607b9950625f4295aceda5969794f2d0/metrics/: accuracy  cm_false_negative  cm_false_positive  cm_true_negative  cm_true_positive  cv_score_avg  cv_score_fold_0  cv_score_fold_1  cv_score_fold_2  cv_score_fold_3  cv_score_fold_4  cv_score_fold_5  cv_score_fold_6  cv_score_fold_7  cv_score_fold_8  cv_score_fold_9  f1  precision  recall
mlruns/451244737800504898/607b9950625f4295aceda5969794f2d0/params/: sample_no_events
mlruns/451244737800504898/607b9950625f4295aceda5969794f2d0/tags/: mlflow.log-model.history  mlflow.runName
mlruns/451244737800504898/9ebd592b130b44d7896052ee2b01aaf8/: meta.yaml
mlruns/451244737800504898/9ebd592b130b44d7896052ee2b01aaf8/metrics/: accuracy  cm_false_negative  cm_false_positive  cm_true_negative  cm_true_positive  f1  (+13 more)
mlruns/451244737800504898/b22d42f0cf6f48d097d5a12cefcdb6b6/: meta.yaml
mlruns/451244737800504898/d09b6a9023c94258a74dc56c17a2a8b6/: meta.yaml
mlruns/741020055806445280/: meta.yaml
mlruns/741020055806445280/1bb00d287f5d4ba5863201202e9ee25b/: meta.yaml
mlruns/741020055806445280/21cca57e9a084923ac21459a7b170519/: meta.yaml
mlruns/741020055806445280/3b7de0efdac8448583e6de9bcda02524/: meta.yaml
mlruns/741020055806445280/3da3b5b3b42b4f8388c2d281009e6c11/: meta.yaml
mlruns/741020055806445280/4358ce904a4d469283b602f8f297192b/: meta.yaml
mlruns/741020055806445280/4c693371af8e469d81adc0eea5d2db5d/: meta.yaml
mlruns/741020055806445280/5e2cb055b36942e89ea55f9ed62f26bc/: meta.yaml
mlruns/741020055806445280/61aeeb3c7f784eb986accc9126f060e4/: meta.yaml
mlruns/741020055806445280/7c4d4ff53a1e4a669f46de825fcc5be4/: meta.yaml
mlruns/741020055806445280/80d20cc6362441f0bacc247a81ad3f15/: meta.yaml
mlruns/741020055806445280/96aff141d7d44b09b37cec71be8cce10/: meta.yaml
mlruns/741020055806445280/ac35659126354cae8c92e9e769131e05/: meta.yaml
mlruns/741020055806445280/ae837ca6445b469790ade0ca020931e7/: meta.yaml
mlruns/741020055806445280/d8613676ad3145539d879480b1849602/: meta.yaml
mlruns/741020055806445280/e5629a6099394fa88743920dc4c40a1a/: meta.yaml
mlruns/741020055806445280/f7a0ed8cca4d4aa98f16ccb471075e90/: meta.yaml
mlruns/models/XGBClassifier/: meta.yaml
src/: config.py  main.py
src/analytics/: __init__.py  alerts.py  grouper.py  ml.py
src/dashboard/: index.py  init.py  train.py  update_data.py  update_model.py
src/dashboard/components/: __init__.py  graphs.py  maps.py  metadata.py  ml_params.py
src/utils/: __init__.py  utils.py
tests/: test_events.py  test_utils.py
thesis/: biblio.bib  cover.tex  thesis.tex  todo.md
thesis/diagrams/: dashboard.mmd  fuente_datos.mmd  general.mmd  wf_dash.mmd
utils/: __init__.py  data.py  exploratory.py  insert_to_db.py  utils.py
waze/: alerts.py  api.py  events.py  info.py
(+471 files in other folders)
